--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 
+
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+button {
+  margin: 0 6px;
+
+  &.router-active {
+    font-size: 20px;
+    background-color: #33408b;
+  }
+}
