--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,41 @@
 /* You can add global styles to this file, and also import other style files */
 
+@use '@angular/material' as mat;
+@include mat.core();
+$custon-palette: (
+ 50: #e8f6ea,
+ 100: #c5e9cd,
+ 200: #9fdab1,
+ 300: #79cb79,
+ // ... continues to 900
+ contrast: (
+   50: rgba(black, 0.87),
+   100: rgba(black, 0.87),
+   200: rgba(black, 0.87),
+   300: white,
+   // ... continues to 900
+ )
+);
+
+$my-primary: mat.define-palette(mat.$indigo-palette, 300);
+$my-accent: mat.define-palette(mat.$pink-palette, A200, A400, A400);
+$my-warn: mat.define-palette(mat.$red-palette);
+
+$my-theme: mat.define-light-theme((
+ color: (
+   primary: $my-primary,
+   accent: $my-accent,
+   warning: my-warn
+ ),
+ typography: mat.define-typography-config(),
+ density: 0,
+));
+
+@include mat.all-component-themes($my-theme);
+
+
+
+
 
 
 html, body { height: 100%; }
