--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,3 +49,15 @@ button {
     background-color: #33408b;
   }
 }
+
+.content {
+  margin: 20px 10px;
+}
+
+.loadin-spinner {
+  background-color: #00000026;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 300px;
+}
