--- a/src/app/_Pages/courses/courses.component.html
+++ b/src/app/_Pages/courses/courses.component.html
@@ -26,7 +26,12 @@
           <!-- Category Column -->
           <ng-container matColumnDef="category">
             <th mat-header-cell *matHeaderCellDef> Category </th>
-            <td mat-cell *matCellDef="let course"> {{ course.category }} </td>
+            <td mat-cell *matCellDef="let course">
+              <div class="category-center">
+                {{ course.category }}
+                <mat-icon>{{ course.category | category }}</mat-icon>
+              </div>
+            </td>
           </ng-container>
 
           <!-- Actions Columns -->
