--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,14 +18,14 @@ $custon-palette: (
 );
 
 $my-primary: mat.define-palette(mat.$indigo-palette, 300);
-$my-accent: mat.define-palette(mat.$pink-palette, A200, A400, A400);
+$my-accent: mat.define-palette(mat.$indigo-palette, A200, A400, A700);
 $my-warn: mat.define-palette(mat.$red-palette);
 
 $my-theme: mat.define-light-theme((
  color: (
    primary: $my-primary,
    accent: $my-accent,
-   warning: my-warn
+   warning: $my-warn,
  ),
  typography: mat.define-typography-config(),
  density: 0,
