--- a/src/app/_Pages/courses/courses.component.html
+++ b/src/app/_Pages/courses/courses.component.html
@@ -1,72 +1,18 @@
-<div class="content">
+<div class="content column-flex">
   <mat-card>
-    <mat-toolbar color="primary" style="margin-bottom: 14px;">
-      <span>Cursos Disponíveis</span>
-    </mat-toolbar>
+    <app-toolbar> <span>Cursos disponiveis</span> </app-toolbar>
 
+    <div class="mat-elevation-z8">
     <mat-card-content>
-      <div *ngIf="courses$ | async as courses; else loading">
-        <table mat-table [dataSource]="courses">
-          <!-- Id Column -->
-          <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef> No. </th>
-            <td mat-cell *matCellDef="let course"> {{ course.id }} </td>
-          </ng-container>
-
-          <!-- Name Column -->
-          <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Name </th>
-            <td mat-cell *matCellDef="let course"> {{ course.name }} </td>
-          </ng-container>
-
-          <!-- Category Column -->
-          <ng-container matColumnDef="category">
-            <th mat-header-cell *matHeaderCellDef> Category </th>
-            <td mat-cell *matCellDef="let course">
-              <div class="category-center">
-                {{ course.category }}
-                <mat-icon>{{ course.category | category }}</mat-icon>
-              </div>
-            </td>
-          </ng-container>
-
-          <!-- Actions Columns -->
-          <ng-container matColumnDef="actions">
-            <mat-header-cell *matHeaderCellDef>
-              <button
-                mat-mini-fab
-                color="second"
-                matTooltip="Adicionar Curso"
-                (click)="onAdd()">
-                <mat-icon>add</mat-icon>
-              </button>
-            </mat-header-cell>
-
-            <mat-cell *matCellDef="let course">
-              <button
-                mat-icon-button
-                matTooltip="Editar Curso"
-                color="primary">
-                <mat-icon>edit</mat-icon>
-              </button>
-
-              <button
-                mat-icon-button
-                matTooltip="Deletar Curso"
-                color="warn">
-                <mat-icon>delete_forever</mat-icon>
-              </button>
-            </mat-cell>
-          </ng-container>
-
-          <tr mat-header-row *matHeaderRowDef="coursesColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: coursesColumns;"></tr>
-        </table>
-      </div>
-
-    </mat-card-content>
+        <app-course-table
+          *ngIf="courses$ | async as courses; else loading"
+          [courses]="courses"
+        ></app-course-table>
+      </mat-card-content>
+    </div>
   </mat-card>
 </div>
+
 <ng-template #loading>
   <div class="loadin-spinner">
     <mat-spinner></mat-spinner>
