--- a/src/app/_Pages/courses/courses.component.html
+++ b/src/app/_Pages/courses/courses.component.html
@@ -7,14 +7,15 @@
         <app-course-table
           *ngIf="courses$ | async as courses; else loading"
           [courses]="courses"
+          (add)="onAdd()"
         ></app-course-table>
       </mat-card-content>
     </div>
   </mat-card>
 </div>
-
 <ng-template #loading>
   <div class="loadin-spinner">
     <mat-spinner></mat-spinner>
   </div>
 </ng-template>
+
