--- a/src/app/_Components/tables/course-table/course-table.component.html
+++ b/src/app/_Components/tables/course-table/course-table.component.html
@@ -35,7 +35,8 @@
       <button
         mat-icon-button
         matTooltip="Editar Curso"
-        color="primary">
+        color="primary"
+        (click)="onEdit(course)">
         <mat-icon>edit</mat-icon>
       </button>
 
